More buttons fixing on mobile.

--- a/SPWebApplication/SPFrontEndAngular/app/style/src/buttons.less
+++ b/SPWebApplication/SPFrontEndAngular/app/style/src/buttons.less
@@ -77,4 +77,9 @@
         padding-left: 4px;
         padding-right: 4px;
     }
+
+    .col-cap-voting {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
